# biosphere-monitor

./: .gitignore  ATxmega_help.h  Adapter.brd  CMakeLists.txt  Commands.md  Cost_Estimate.ods  Help.md  InterfaceStandard.csv  JLCPCB.cam  LICENSE  Lux Messurments.ods  README.md  bioGui  biosphere  biosphere.c  biosphere.csv  biosphereMonitor.brd  biosphereMonitor.sch  bme.h  itoa.h  main.c  makefile  reading.h  tty.h
Calculator/: Calculator.c  Function.h  calc  in.csv  rtFunction.h
Documentation/: Cost_Estimate.ods  InterfaceStandard.csv  IntroPressentation.odp  Lux Messurments.ods  Manual.tex  RH Messurments.ods  Sample_Output.csv  Sample_Output.xlsx
Gui/: bioGui  bioGui.glade  gui.c  gui.cpp  signals.h  signals.hpp
Hardware/: Adapter.sch  Cap.stl  MainPlate.stl  MainPlateFlat.stl
Manual/: Manual.tex
Microcontroller/: ATxmegaAux.h  ATxmega_help.h  CMakeLists.txt  Spi_Flash.h  bme.c  bme.h  main.c  makefile  spiFlash.c  spiFlash.h
PC/: bioGui.desktop  bioGui.glade  biosphere  biosphere.c  biosphere.cpp  biosphere.csv  biosphere.h  biosphere.hpp  cli.c  cli.cpp  gui.c  makefile  signals.h  tty.c  tty.cpp  tty.h  tty.hpp
PCB/: biosphereMonitor.brd
Shell/: bioPi.awk  bioPi.sh  gaps.awk  install.sh  kiosk.sh
pc_rust/: Cargo.toml
pc_rust/src/: main.rs  reading.rs  tty.rs
